Cleaned the "Exploration" section

--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -12,12 +12,124 @@
     },
     {
       "cell_type": "markdown",
+      "id": "cEat8wvxrXwk",
+      "metadata": {
+        "id": "cEat8wvxrXwk"
+      },
+      "source": [
+        "## Char Encoding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "HIqnYi6DSCuw",
+      "metadata": {
+        "id": "HIqnYi6DSCuw"
+      },
+      "outputs": [],
+      "source": [
+        "# Vocabulary to encode\n",
+        "vocab = [x for x in \"abcdefghijklmnopqrstuvwxyz'?!123456789 \"]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "7rVmzIGvrf1U",
+      "metadata": {
+        "id": "7rVmzIGvrf1U"
+      },
+      "outputs": [],
+      "source": [
+        "# Char to num converter\n",
+        "char_to_num = tf.keras.layers.StringLookup(vocabulary=vocab, oov_token=\"\")\n",
+        "# Num to char converter\n",
+        "num_to_char = tf.keras.layers.StringLookup(vocabulary=char_to_num.get_vocabulary(), oov_token=\"\", invert=True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "eBSRU1ylhFRz",
+      "metadata": {
+        "id": "eBSRU1ylhFRz"
+      },
+      "source": [
+        "### Conversion Test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9bnqDcPvO2t0",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9bnqDcPvO2t0",
+        "outputId": "202bf051-5538-4598-dd14-b87a166101b5"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4,), dtype=int64, numpy=array([7, 1, 2, 5])>"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Conversion test\n",
+        "char_to_num(['g', 'a', 'b', 'e'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "qF2h_zfWS6Iu",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qF2h_zfWS6Iu",
+        "outputId": "4dd2feb2-037d-4d3b-ed3c-15593dea3953"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(4,), dtype=string, numpy=array([b'g', b'a', b'b', b'e'], dtype=object)>"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Retrieving chars test\n",
+        "num_to_char([7, 1, 2, 5])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "WlFEkhfOs60v",
       "metadata": {
         "id": "WlFEkhfOs60v"
       },
       "source": [
         "## Load Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "516621ec",
+      "metadata": {},
+      "source": [
+        "### Setup"
       ]
     },
     {
@@ -119,12 +231,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "11086238",
+      "metadata": {},
+      "source": [
+        "### Videos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "F_7e-sSyo-ap",
       "metadata": {
         "id": "F_7e-sSyo-ap"
       },
       "source": [
-        "## Video Loading Test"
+        "#### Video Loading Test"
       ]
     },
     {
@@ -404,7 +524,7 @@
         "id": "Kx_GQXWFpDGl"
       },
       "source": [
-        "## Video Loading Function"
+        "#### Video Loading Function"
       ]
     },
     {
@@ -487,7 +607,7 @@
         "id": "cZ1S94bt-Rbc"
       },
       "source": [
-        "## Video loading with dlib"
+        "#### Video loading with dlib"
       ]
     },
     {
@@ -1381,7 +1501,7 @@
         "id": "EqJiGWXBemDe"
       },
       "source": [
-        "## Check for corrupted videos"
+        "#### Check for corrupted videos"
       ]
     },
     {
@@ -6492,106 +6612,10 @@
     },
     {
       "cell_type": "markdown",
-      "id": "cEat8wvxrXwk",
-      "metadata": {
-        "id": "cEat8wvxrXwk"
-      },
+      "id": "48b3f78e",
+      "metadata": {},
       "source": [
-        "## Char Encoding"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "HIqnYi6DSCuw",
-      "metadata": {
-        "id": "HIqnYi6DSCuw"
-      },
-      "outputs": [],
-      "source": [
-        "# Vocabulary to encode\n",
-        "vocab = [x for x in \"abcdefghijklmnopqrstuvwxyz'?!123456789 \"]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "7rVmzIGvrf1U",
-      "metadata": {
-        "id": "7rVmzIGvrf1U"
-      },
-      "outputs": [],
-      "source": [
-        "# Char to num converter\n",
-        "char_to_num = tf.keras.layers.StringLookup(vocabulary=vocab, oov_token=\"\")\n",
-        "# Num to char converter\n",
-        "num_to_char = tf.keras.layers.StringLookup(vocabulary=char_to_num.get_vocabulary(), oov_token=\"\", invert=True)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "eBSRU1ylhFRz",
-      "metadata": {
-        "id": "eBSRU1ylhFRz"
-      },
-      "source": [
-        "### Conversion Test"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "9bnqDcPvO2t0",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9bnqDcPvO2t0",
-        "outputId": "202bf051-5538-4598-dd14-b87a166101b5"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(4,), dtype=int64, numpy=array([7, 1, 2, 5])>"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Conversion test\n",
-        "char_to_num(['g', 'a', 'b', 'e'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "qF2h_zfWS6Iu",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qF2h_zfWS6Iu",
-        "outputId": "4dd2feb2-037d-4d3b-ed3c-15593dea3953"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(4,), dtype=string, numpy=array([b'g', b'a', b'b', b'e'], dtype=object)>"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "# Retrieving chars test\n",
-        "num_to_char([7, 1, 2, 5])"
+        "### Alignments"
       ]
     },
     {
@@ -6601,7 +6625,7 @@
         "id": "sK11OrQas5U6"
       },
       "source": [
-        "## Alignments Loading Test"
+        "#### Alignments Loading Test"
       ]
     },
     {
@@ -6694,7 +6718,7 @@
         "id": "7B6zNt0bTqpe"
       },
       "source": [
-        "## Alignments Loading Function"
+        "#### Alignments Loading Function"
       ]
     },
     {
@@ -6733,19 +6757,7 @@
         "id": "o0l5jCmwYeYg"
       },
       "source": [
-        "### Test"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "VRtF6pveU_Ii",
-      "metadata": {
-        "id": "VRtF6pveU_Ii"
-      },
-      "outputs": [],
-      "source": [
-        "x = load_alignments(al_path)"
+        "#### Test"
       ]
     },
     {
@@ -6774,6 +6786,7 @@
         }
       ],
       "source": [
+        "x = load_alignments(al_path)\n",
         "x"
       ]
     },
@@ -6820,38 +6833,7 @@
         "id": "ZAOhmsoRntnz",
         "outputId": "a0d22d2b-5ddb-443a-c634-fe11fa5b2ace"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Loaded srbi1a.align\n",
-            "Loaded lbbq8n.align\n",
-            "Loaded swbc1s.align\n",
-            "Loaded lbwe5s.align\n",
-            "Loaded bbaszn.align\n",
-            "Loaded pgwl1s.align\n",
-            "Loaded lwbs1s.align\n",
-            "Loaded bbiz3a.align\n",
-            "Loaded sbbh2n.align\n",
-            "Loaded prii6n.align\n",
-            "Loaded lbwlzp.align\n"
-          ]
-        },
-        {
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-30-918424e15c6b>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m   \u001b[0malignment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_alignments\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m   \u001b[0malignments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malignment\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Loaded {file}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-23-60794032d588>\u001b[0m in \u001b[0;36mload_alignments\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# Open align file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mlines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m   \u001b[0;31m# Tokenize alignments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/lib/python3.11/codecs.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, input, final)\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "path_2 = \"./drive/MyDrive/Project/Lip_reading/raw_data/alignments/s1\"\n",
         "# path_2 = \"../raw_data/alignments/s1\"\n",
@@ -6868,36 +6850,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "DD-OxgsmoGfa",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 159
-        },
-        "id": "DD-OxgsmoGfa",
-        "outputId": "592f7cd6-a0a1-47c7-e7e7-01bb4fcede38"
-      },
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "max() arg is an empty sequence",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-94dd80b6648c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmax_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtensor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0malignments\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Longest alignment length:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: max() arg is an empty sequence"
-          ]
-        }
-      ],
-      "source": [
-        "max_len = max([tf.shape(tensor)[0].numpy() for tensor in alignments])\n",
-        "print(\"Longest alignment length:\", max_len)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "X4yy5tJXudC0",
       "metadata": {
         "id": "X4yy5tJXudC0"
@@ -6909,12 +6861,20 @@
     },
     {
       "cell_type": "markdown",
+      "id": "98b60e9d",
+      "metadata": {},
+      "source": [
+        "### Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "fP9GgYzkYhEc",
       "metadata": {
         "id": "fP9GgYzkYhEc"
       },
       "source": [
-        "## Load Data Function"
+        "#### Load Data Function"
       ]
     },
     {
@@ -6960,7 +6920,7 @@
         "id": "q5-QaFwyeD-y"
       },
       "source": [
-        "### Load Test"
+        "#### Load Test"
       ]
     },
     {
@@ -7393,7 +7353,15 @@
         "id": "2zChlB5fWx7J"
       },
       "source": [
-        "## Baseline"
+        "## Baseline Prediction"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cc5eaf48",
+      "metadata": {},
+      "source": [
+        "Done without training, on a manual cropped frame"
       ]
     },
     {
