Added weights loader in the evaluate section

--- a/notebook/gabriel_EDA.ipynb
+++ b/notebook/gabriel_EDA.ipynb
@@ -8312,12 +8312,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "XLyH0gb0VITD",
       "metadata": {
         "id": "XLyH0gb0VITD"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-06-03 11:48:40.353582: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2025-06-03 11:48:40.523040: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+            "2025-06-03 11:48:40.683203: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+            "E0000 00:00:1748918920.810169   19279 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "E0000 00:00:1748918920.846985   19279 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "W0000 00:00:1748918921.134442   19279 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1748918921.134505   19279 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1748918921.134507   19279 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "W0000 00:00:1748918921.134508   19279 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+            "2025-06-03 11:48:41.180553: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+          ]
+        }
+      ],
       "source": [
         "# Imports\n",
         "import os\n",
@@ -8336,7 +8355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "e1aaaeea",
       "metadata": {
         "colab": {
@@ -8350,29 +8369,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Running on Google Colab\n",
-            "GPU memory growth enabled.\n",
-            "Mon Jun  2 08:40:03 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   46C    P8              9W /   70W |       2MiB /  15360MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "Mounted at /content/drive\n"
+            "Running on a local machine\n",
+            "\n",
+            "Num GPUs Available:  0\n"
           ]
         }
       ],
@@ -8430,12 +8429,13 @@
         "# Set the data sub-directories\n",
         "videos_path = os.path.join(root_path, data_path, 'videos')\n",
         "aligns_path = os.path.join(root_path, data_path, 'alignments')\n",
-        "models_path = os.path.join(root_path, \"models\")\n"
+        "models_path = os.path.join(root_path, 'models')\n",
+        "dlib_path = os.path.join(root_path, 'dlib')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "id": "Yae6M1isHHTn",
       "metadata": {
         "id": "Yae6M1isHHTn"
@@ -8457,7 +8457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "DZxL0hw3VaQc",
       "metadata": {
         "id": "DZxL0hw3VaQc"
@@ -8475,7 +8475,7 @@
         "\n",
         "# Load dlib model\n",
         "detector = dlib.get_frontal_face_detector()\n",
-        "predictor = dlib.shape_predictor(\"./drive/MyDrive/Project/Lip_reading/dlib/shape_predictor_68_face_landmarks.dat\")\n",
+        "predictor = dlib.shape_predictor(os.path.join(dlib_path, \"shape_predictor_68_face_landmarks.dat\"))\n",
         "\n",
         "\n",
         "# ---------------------------------------------------------------\n",
@@ -8635,7 +8635,7 @@
         "    result = tf.py_function(load_data, [path], (tf.float32, tf.int64))\n",
         "    return result\n",
         "\n",
-        "def preprocess_training_data(path: str):\n",
+        "def preprocess_training_data(path: str, train_samples_to_keep=0.9):\n",
         "    '''\n",
         "    Takes the path to the data folder as a string,\n",
         "    preprocess the videos from that path into batches of 2,\n",
@@ -8655,7 +8655,7 @@
         "    data = data.padded_batch(batch_size, padded_shapes=([75, None, None, None], [40]))\n",
         "    data = data.prefetch(tf.data.AUTOTUNE)\n",
         "    # Train Test Split\n",
-        "    train_samples = int((total_num_videos/batch_size) * 0.9)\n",
+        "    train_samples = int((total_num_videos/batch_size) * train_samples_to_keep)\n",
         "    train = data.take(train_samples)\n",
         "    test = data.skip(train_samples)\n",
         "\n",
@@ -8920,7 +8920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "PJ-u_Fb-ZuQt",
       "metadata": {
         "colab": {
@@ -8930,13 +8930,21 @@
         "id": "PJ-u_Fb-ZuQt",
         "outputId": "9285c831-16e8-49c3-ddc0-ad6e67442f3e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Loading weights from ../models/checkpoint_epoch04_loss52.54.weights.h5\n"
+          ]
+        }
+      ],
       "source": [
         "# Weights to load\n",
-        "weights_file_name = 'checkpoint_epoch19_loss0.93.weights.h5'\n",
+        "weights_file_name = 'checkpoint_epoch04_loss52.54.weights.h5'\n",
         "\n",
         "weights_path = os.path.join(models_path, weights_file_name)\n",
-        "print(f'Loading weights at {weights_path}')\n",
+        "print(f'Loading weights from {weights_path}')\n",
         "\n",
         "model = initialize_model()\n",
         "model = load_model_weights(model, weights_path)"
@@ -8954,12 +8962,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "dbd297f3",
       "metadata": {},
       "outputs": [],
       "source": [
-        "test_file = \"bbal6n\"\n",
+        "test_file = \"pbwp9a\"\n",
         "\n",
         "test_video_path = os.path.join(videos_path, f'{test_file}.mpg')\n",
         "test_align_path = os.path.join(aligns_path, f'{test_file}.align')"
@@ -8967,7 +8975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "666e2712",
       "metadata": {
         "colab": {
@@ -8976,10 +8984,32 @@
         "id": "666e2712",
         "outputId": "022e1648-6ab0-434e-879c-27331d5d9c75"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2025-06-03 11:57:21.208482: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 192000000 exceeds 10% of free system memory.\n",
+            "2025-06-03 11:57:21.538108: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 192000000 exceeds 10% of free system memory.\n",
+            "2025-06-03 11:57:24.198164: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 192000000 exceeds 10% of free system memory.\n",
+            "2025-06-03 11:57:26.261932: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 48000000 exceeds 10% of free system memory.\n",
+            "2025-06-03 11:57:27.417219: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:83] Allocation of 96000000 exceeds 10% of free system memory.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Prediction: pla re ee oon\n",
+            "Origin:     place blue with p nine again\n",
+            "CPU times: user 33.1 s, sys: 40.7 s, total: 1min 13s\n",
+            "Wall time: 18.2 s\n"
+          ]
+        }
+      ],
       "source": [
         "%%time\n",
-        "pred, align = run_prediction(model, video_path)\n",
+        "pred, align = run_prediction(model, test_video_path)\n",
         "print(f'Prediction: {pred}')\n",
         "print(f'Origin:     {align}')"
       ]
@@ -8997,23 +9027,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "-faCG7M5C6ZB",
-      "metadata": {
-        "id": "-faCG7M5C6ZB",
-        "outputId": "95497ac9-f070-44b7-ef74-171f572e6a71"
-      },
-      "outputs": [],
-      "source": [
-        "speaker_path = os.path.join(videos_path, 's1')\n",
-        "train, test = preprocess_training_data(speaker_path)\n",
-        "\n",
-        "print(f'train: {len(train)}')\n",
-        "print(f'test: {len(test)}')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "f95ca004",
       "metadata": {
         "id": "f95ca004"
@@ -9026,23 +9039,34 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "-faCG7M5C6ZB",
+      "metadata": {
+        "id": "-faCG7M5C6ZB",
+        "outputId": "95497ac9-f070-44b7-ef74-171f572e6a71"
+      },
+      "outputs": [],
+      "source": [
+        "train, test = preprocess_training_data(videos_path, 0)\n",
+        "\n",
+        "print(f'train: {len(train)}')\n",
+        "print(f'test: {len(test)}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "6UwqKakjxICu",
       "metadata": {
         "id": "6UwqKakjxICu",
         "outputId": "13f0724b-d6cd-484c-f8f4-d5dbf5de1eec"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/home/gabriel/.pyenv/versions/lip_reading-env/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "weights_path = os.path.join(models_path, 'weights/checkpoint_epoch06_loss1.67.weights.h5')\n",
+        "# Weights to load\n",
+        "weights_file_name = 'checkpoint_epoch04_loss52.54.weights.h5'\n",
+        "\n",
+        "weights_path = os.path.join(models_path, weights_file_name)\n",
+        "print(f'Loading weights from {weights_path}')\n",
         "\n",
         "model = initialize_model()\n",
         "model = load_model_weights(model, weights_path)\n",
